# PetProject_OrderCinemaTickets

./: .gitignore  README.md  Test.txt
Back-end/: OrderCinemaTickets.pro
Backend/: ReadThis.txt
Backend/Backend/: pom.xml
Backend/Backend/src/main/java/com/orderCinemaTickets/Backend/: BackendApplication.java
Backend/Backend/src/main/java/com/orderCinemaTickets/Backend/controller/: UserController.java
Backend/Backend/src/main/java/com/orderCinemaTickets/Backend/exception/: UserNotFoundAdvice.java  UserNotFoundException.java
Backend/Backend/src/main/java/com/orderCinemaTickets/Backend/model/: User.java
Backend/Backend/src/main/java/com/orderCinemaTickets/Backend/repository/: UserRepository.java
Backend/Backend/src/main/resources/: application.properties
Backend/Backend/src/test/java/com/orderCinemaTickets/Backend/: BackendApplicationTests.java
Dekstop/: OrderCinemaTickets.pro  ReadThis.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Dekstop/WebInteraction/: MethodType.h  Pictures.qrc  QML.qrc  webcontext.cpp  webcontext.h  webinteraction.pri  webrequestbody.cpp  webrequestbody.h  webrequestdatawidget.cpp  webrequestdatawidget.h  webrequestinfo.cpp  webrequestinfo.h  webrequestwidget.cpp  webrequestwidget.h
Dekstop/WebInteraction/Resourses/QML/: QMLLoadingPicture.qml
Desktop/: CMakeLists.txt  Desktop.qmlproject  Desktop.qmlproject.qtds  Loadable.qml  Logger.qml  main.cpp  main.qml  qmlmodules  qmlsettings  resources.qrc
Desktop/backend/: CMakeLists.txt
Desktop/backend/actioninteraction/: CMakeLists.txt  IAction.h  actioncontext.cpp  actioncontext.h  clickaction.cpp  clickaction.h
Desktop/backend/communicationhandling/: CMakeLists.txt  communicationhandler.cpp  communicationhandler.h
Desktop/backend/enumsmodel/: CMakeLists.txt  enumitem.h  enumitemsmodel.cpp  enumitemsmodel.h
Desktop/backend/listmodel/: CMakeLists.txt
Desktop/backend/listmodel/enumlistmodel/: enumitem.cpp  enumitem.h  enumlistmodel.cpp  enumlistmodel.h
Desktop/backend/listmodel/enumslistmodel/: enumitem.cpp  enumitemsmodel.h
Desktop/backend/listmodel/menulistmodel/: menulistmodel.cpp  menulistmodel.h
Desktop/backend/logger/: CMakeLists.txt  ILoggingObject.h  logger.cpp  logger.h
Desktop/backend/loggermodel/: CMakeLists.txt  ILoggerModel.h  ILoggingObject.h
Desktop/backend/loggermodel/fullviewlogger/: fullviewloggermodel.cpp  fullviewloggermodel.h
Desktop/backend/loggermodel/loggersection/: loggersectionmodel.cpp  loggersectionmodel.h
Desktop/backend/loggermodel/windowlogger/: windowloggermodel.cpp  windowloggermodel.h
Desktop/backend/menuitemmodel/: CMakeLists.txt  IMenuItemModel.h
Desktop/backend/menuitemmodel/buttonmenuitem/: buttonmenuitemmodel.cpp  buttonmenuitemmodel.h
Desktop/backend/modelforenums/: CMakeLists.txt  comboboxmodel.cpp  comboboxmodel.h  enumitem.cpp  enumitemsmodel.cpp  enumitemsmodel.h
Desktop/backend/modelforwebrequest/: CMakeLists.txt  webrequestinfo.h
Desktop/backend/modulestorage/: CMakeLists.txt  modulestorage.cpp  modulestorage.h
Desktop/backend/webinteraction/: CMakeLists.txt  RequestBodyType.h  RequestEnums.h  RequestRoot.h  RequestType.h  communicationhandler.cpp  communicationhandler.h  replywithidentifier.cpp  replywithidentifier.h  requestresponcehandling.cpp  requestresponcehandling.h  webcontext.cpp  webcontext.h
Desktop/backend/webrequestmodel/: CMakeLists.txt  IWebRequestInfo.h  IWebRequestModel.h  webrequestforminfo.cpp  webrequestforminfo.h  webrequestinfo.cpp
Desktop/backend/webrequestmodel/requestform/: requestformmodel.cpp  requestformmodel.h
Desktop/backend/webresponcemodel/: CMakeLists.txt  IWebResponceModel.h
Desktop/backend/webresponcemodel/rawresponce/: rawresponcemodel.cpp  rawresponcemodel.h
Desktop/backend/webresponcemodel/simplewindow/: simplewindowmodel.cpp  simplewindowmodel.h
Desktop/content/: App.qml  CMakeLists.txt  CustomComboBox.qml  LineTextInput.qml  MultiLineTextInput.qml  Screen01.ui.qml  WebRequestForm.qml
Desktop/content/qmlcustomwidgets/: CMakeLists.txt  LineTextInput.qml  MultiLineTextInput.qml  qmldir
Desktop/content/qmlelements/: CMakeLists.txt  WebRequestForm.qml
Desktop/imports/: CMakeLists.txt
Desktop/imports/Desktop/: CMakeLists.txt  qmldir
Desktop/imports/Desktop/designer/: plugin.metainfo
Desktop/modules/: CMakeLists.txt
Desktop/modules/requestform/: CMakeLists.txt  WebRequestForm.qml  comboboxmodel.cpp  comboboxmodel.h  enumitem.cpp  enumitem.h  webrequestinfo.h
Desktop/modules/webinteraction/: CMakeLists.txt  types.h  webcontext.cpp  webcontext.h
Desktop/modules/webinteraction/requestform/: CMakeLists.txt  WebRequestForm.qml
Desktop/qml/: CMakeLists.txt
Desktop/qml/constants/: CMakeLists.txt  Colors.qml  ConstColors.qml  ConstSizes.qml  DefaultSizeProps.qml  Sizes.qml  qmldir
Desktop/qml/custom/: AdaptiveContextMenu.qml  AdaptiveMenu.qml  AdaptiveMenuBar.qml  ButtonMenuItem.qml  CMakeLists.txt  CustomButton.qml  CustomComboBox.qml  HorizontalMenuBar.qml  LineTextInput.qml  LoadingScreen.qml  LoggerSection.qml  MultiLineTextInput.qml  MyButton.qml  MyComboBox.qml  MyLineText.qml  MyMultiLineText.qml  RawResponceSection.qml  WebRequestForm.qml  WindowLogger.qml  web_request_form.js
Desktop/qml/pages/: CMakeLists.txt  TemplatePage.qml  WelcomePage.qml
Desktop/src/: CMakeLists.txt  app_environment.h  import_qml_plugins.h
Desktop/src/WebInteraction/: CMakeLists.txt  typesforrequestmethod.h  webcontext.cpp  webcontext.h  webrequestinfo.cpp  webrequestinfo.h  webrequestwidget.cpp  webrequestwidget.h
Frontend/: ReadThis.txt
Frontend/frontend/src/: App.js
Frontend/frontend/src/layout/: Navbar.js
Frontend/frontend/src/pages/: Home.js
